# kabAI

./: .env.demo  .env.docker  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/agents/: default-agents.json
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: agents.py  auth.py  connectors.py  conversations.py  exemplars.py  huggingface.py  knowledge.py  usage.py  (+6 more)
backend/app/core/: database.py  exceptions.py  qdrant.py  redis.py  security.py
backend/app/models/: agent.py  connector.py  conversation.py  exemplar.py  ingest_queue.py  knowledge_base.py  prompt_guard.py  provider.py  search_provider.py  system_settings.py  usage_log.py  user.py
backend/app/repositories/: agent_repo.py  connector_repo.py  conversation_repo.py  exemplar_repo.py  ingest_queue_repo.py  knowledge_repo.py  prompt_guard_repo.py  provider_repo.py  search_provider_repo.py  settings_repo.py  usage_repo.py  user_repo.py
backend/app/schemas/: agent.py  auth.py  connector.py  conversation.py  provider.py
backend/app/services/: auth_service.py  background_manager.py  connector_manager.py  conversation_service.py  exemplar_service.py  huggingface_service.py  ingest_manager.py  ingest_worker.py  irc_art_spec.py  knowledge_service.py  llm_service.py  model_router.py  prompt_guard_service.py  provider_service.py  rfc_ingestor.py  search_service.py  vector_service.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_conversations.py
(+53 files in other folders)
